argocd/aoa_apps/objects/gateway-api/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.5.210
      # even though we set this, it doesn't work. we follow up this config with a service manifest to set the IP we want :(
      # more info including this workaround: https://github.com/cilium/cilium/issues/21926#
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.piccola.us'
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.piccola.us'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-piccola.us

---
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.networking.k8s.io/gateway-name: external
    io.cilium.gateway/owning-gateway: external
  name: cilium-gateway-external
  namespace: gateway
  annotations:
    io.cilium/lb-ipam-ips: 10.0.5.210
spec:
  type: LoadBalancer
