argocd/aoa_apps/objects/gateway-api/httproute-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
    - argocd-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
    - argocd-application-controller-metrics.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: argocd-application-controller-metrics
      port: 8082
