argocd/aoa_apps/objects/gateway-api/httproute-doorbell.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: doorbell-route
  namespace: doorbell
spec:
  hostnames:
    - doorbell-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: chime
      port: 6475
