argocd/aoa_apps/objects/gateway-api/httproute-goldilocks.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: goldilocks-route
  namespace: goldilocks
spec:
  hostnames:
    - goldilocks-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: goldilocks-dashboard
      port: 80
