argocd/aoa_apps/objects/gateway-api/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  hostnames:
    - grafana-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: grafana
      port: 80
