argocd/aoa_apps/objects/gateway-api/httproute-pihole.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole
spec:
  hostnames:
    - pihole-k8s.<path:cluster-secrets:cluster-secrets#domain>
  parentRefs:
  - name: internal
    namespace: gateway
  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
